blue-ingress-backup.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"food-ingress","namespace":"blue"},"spec":{"ingressClassName":"nginx","rules":[{"http":{"paths":[{"backend":{"service":{"name":"food-backend-service","port":{"number":4000}}},"path":"/api","pathType":"Prefix"},{"backend":{"service":{"name":"food-frontend-service","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    creationTimestamp: "2026-08-09T16:55:39Z"
    generation: 1
    name: food-ingress
    namespace: blue
    resourceVersion: "31408"
    uid: eb05a3e6-e6b9-4188-9958-d786bad6226f
  spec:
    ingressClassName: nginx
    rules:
    - http:
        paths:
        - backend:
            service:
              name: food-backend-service
              port:
                number: 4000
          path: /api
          pathType: Prefix
        - backend:
            service:
              name: food-frontend-service
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - hostname: localhost
kind: List
metadata:
  resourceVersion: ""
