blue-ingress-before-green-switch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: "2026-08-09T17:57:08Z"
  generation: 1
  name: food-ingress
  namespace: blue
  resourceVersion: "4817"
  uid: c3ca98d0-cd4e-4dae-88c2-c1f4cd3ec948
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: food-backend-service
            port:
              number: 4000
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: food-frontend-service
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: localhost
